s2: Adding some sepolicies for denials. 1- Added Sepolicy for Dolby Atmos Author: @Matshias 2- Added Sepolicy for Letv Remote App Authors: @mosimchah(vold.te) and @darkobas for IR denials. Thank you Devs for Superb work. All credits goes to you.
Signed-off-by: Rohit Jaiswal <jaiswal.rohit6@gmail.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -878,3 +878,9 @@ on property:sys.dbg.coresight.enable=1
 
 on property:sys.dbg.coresight.enable=0
     write /persist/coresight/enable 0
+
+chown system system /dev/ttyHSL1
+    chmod 0666 /dev/ttyHSL1
+#quickset IR
+    chown system system /sys/remote/enable
+    chmod 0666 /sys/remote/enable
